# statistics-in-rust

./: .gitignore  CONTIBUTE.md  LICENSE  README.md  book.toml  devenv.nix  rust-toolchain.toml
examples/: Cargo.toml  TOYLIBRARY.md
examples/ex_example_library/: Cargo.toml
examples/ex_from_r_to_rust/: Cargo.toml
examples/ex_from_r_to_rust/src/: common.rs  lib.rs  tests.rs
examples/ex_library_1/: Cargo.toml
examples/ex_library_1/src/: lib.rs
examples/ex_library_2/: Cargo.toml
examples/ex_library_2/src/: lib.rs
examples/ex_library_3/: Cargo.toml
examples/ex_library_3/src/: lib.rs
examples/ex_library_4/: Cargo.toml
examples/ex_library_4/src/: lib.rs
examples/ex_polars/: Cargo.toml
examples/ex_polars/src/: common.rs  lib.rs  tests.rs
examples/ex_polars/src/res/: myfile.csv
src/: SUMMARY.md  ch_01.md  example_library.md  from_r_to_rust.md  getting_started.md
src/tools/: polars.md
