# Versioning and some other metadata is inherited from the workspace
# to avoid having to define them in every chapter.
# NB: This workspace is treated as having a global version
# DO NOT define a package-specific version.

[package]
version.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true

name = "ex_from_r_to_rust"
authors = ["Oliver Saal"]
description = "Examples for moving from R to Rust for statistical programming"

[lib]
name = "ex_from_r_to_rust"
path = "src/lib.rs"
